--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build && next export",
-        "start": "next start"
+        "start": "next start",
+        "lint": "next lint",
+        "test": "jest",
+        "validate": "node -e \"require('./utils/env').validateEnv()\"",
+        "type-check": "tsc --noEmit"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.3",
@@ -25,5 +29,18 @@
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.4.2",
         "tailwindcss": "^3.3.1"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@types/jest": "^29.5.0",
+        "@types/node": "^18.15.11",
+        "@types/react": "^18.0.33",
+        "@types/react-dom": "^18.0.11",
+        "eslint": "^8.36.0",
+        "eslint-config-next": "^13.2.4",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
+        "typescript": "^5.0.4"
     }
 }
