--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
         "jest": "^29.5.0",
         "jest-environment-jsdom": "^29.5.0",
         "typescript": "^5.0.4"
+    },
+    "engines": {
+        "node": ">=18.0.0"
     }
 }
