--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "private": true,
   "description": "Tarot Card Reader Static Site",
   "scripts": {
-    "start": "serve -s ."
+    "start": "serve -s .",
+    "build": "echo 'Static site - no build required'",
+    "test": "echo 'No tests configured'"
   },
   "dependencies": {
     "serve": "^14.0.0"
+  },
+  "devDependencies": {
+    "compression": "^1.7.4",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
