--- a/amplify.yml
+++ b/amplify.yml
@@ -4,13 +4,15 @@ frontend:
     # IMPORTANT - Please verify your build commands
     preBuild:
       commands:
-        - npm install 20
+        - nvm install 20
+        - nvm use 20
+        - npm ci
     build:
       commands:
-        - npm run build || true  # In case there's no build step needed
+        - npm run build
   artifacts:
     # IMPORTANT - Please verify your artifacts directory
-    baseDirectory: /
+    baseDirectory: .next
     files:
       - '**/*'
   customHeaders:
@@ -29,3 +31,7 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
+      - .next/cache/**/*
+  environment:
+    variables:
+      NODE_VERSION: 20
