--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
-  "name": "tarot-static-site",
+  "name": "tarot-frontend",
   "version": "1.0.0",
   "private": true,
-  "description": "Tarot Card Reader Static Site",
+  "description": "Tarot Card Reader Application",
   "scripts": {
-    "start": "serve -s .",
-    "build": "echo 'Static site - no build required'",
-    "test": "echo 'No tests configured'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "serve": "^14.0.0"
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
+    "axios": "^1.3.4",
+    "framer-motion": "^12.5.0"
   },
   "devDependencies": {
-    "compression": "^1.7.4",
-    "express": "^4.18.2"
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.4",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "^13.2.4"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=20.0.0"
   }
 }
