third is a hope

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,13 +6,14 @@ frontend:
       commands:
         - nvm install 20
         - nvm use 20
-        - npm ci
+        - if [ ! -f package-lock.json ]; then npm install; else npm ci --legacy-peer-deps; fi
     build:
       commands:
+        - env | grep -e NODE_ENV -e NEXT_PUBLIC_ >> .env.production
         - npm run build
   artifacts:
     # IMPORTANT - Please verify your artifacts directory
-    baseDirectory: .next
+    baseDirectory: out
     files:
       - '**/*'
   customHeaders:
@@ -34,4 +35,5 @@ frontend:
       - .next/cache/**/*
   environment:
     variables:
-      NODE_VERSION: 20
+      NODE_ENV: production
+      NEXT_PUBLIC_API_URL: 'https://main.d7tnw9kr9k75r.amplifyapp.com'
