fifth and maybe final

--- a/amplify.yml
+++ b/amplify.yml
@@ -5,11 +5,12 @@ frontend:
     preBuild:
       commands:
         - nvm use 20
-        - npm install
+        - npm install --no-audit
     build:
       commands:
         - env | grep -e NODE_ENV -e NEXT_PUBLIC_ >> .env.production
         - npm run build
+        - if [ ! -d "out" ]; then mkdir -p out && cp -r .next/static out/_next/static; fi
   artifacts:
     # IMPORTANT - Please verify your artifacts directory
     baseDirectory: out
