--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,7 @@
-save-exact=true
+audit=false
+fund=false
+update-notifier=false
+auto-install-peers=true
 legacy-peer-deps=true
-engine-strict=true
-auto-install-peers=true 
+strict-peer-dependencies=false
+save-exact=true 
