--- a/package.json
+++ b/package.json
@@ -5,34 +5,34 @@
   "description": "Tarot Card Reader Application",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export -o out",
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf .next out node_modules",
     "clean-install": "npm run clean && npm install"
   },
   "dependencies": {
-    "next": "13.2.4",
+    "next": "14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@stripe/react-stripe-js": "3.5.1",
-    "@stripe/stripe-js": "6.1.0",
-    "axios": "1.3.4",
-    "framer-motion": "12.5.0"
+    "@stripe/react-stripe-js": "2.6.2",
+    "@stripe/stripe-js": "3.0.10",
+    "axios": "1.6.7",
+    "framer-motion": "11.0.14"
   },
   "devDependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.21",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4"
+    "@types/node": "20.11.28",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
+    "autoprefixer": "10.4.18",
+    "postcss": "8.4.35",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.4.2",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.3"
   },
   "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=10.0.0"
+    "node": ">=20.9.0",
+    "npm": ">=10.1.0"
   }
 }
